Configure project for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -20,7 +20,8 @@
     }
   ],
   "env": {
-    "NODE_OPTIONS": "--openssl-legacy-provider"
+    "NODE_OPTIONS": "--openssl-legacy-provider",
+    "CI": "false"
   },
   "buildCommand": "npm run build"
 }
