--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "vercel-build": "NODE_OPTIONS=--openssl-legacy-provider npm run build"
+    "vercel-build": "NODE_OPTIONS=--openssl-legacy-provider CI=false npm run build"
   },
   "eslintConfig": {
     "extends": [
