Fix: Update asset manifest and API baseURL for consistency and development proxy

--- a/package.json
+++ b/package.json
@@ -55,5 +55,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://mowosocw4sgwsk84kw4ks40c.62.171.183.132.sslip.io"
 }
